concluindo configuração inicial
